changes after zoom

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(ass3)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(ass3
-        main.cpp Distances.cpp GenericVector.cpp Server.cpp Server.h)
+        Distances.cpp Distances.h GenericVector.cpp GenericVector.h Server.cpp Server.h)
 add_executable(Client
         Client.cpp Client.h)
